Fixes blog index spacing

--- a/stylesheets/pages.css
+++ b/stylesheets/pages.css
@@ -332,7 +332,7 @@ code[data-lang]:after {
 
 .content .blog-index-item {
     margin: 1.5em 0 0 0;
-    padding: 1.5em 0 0 0;
+    padding: 0;
     border-top: 1px solid hsl(0,0%,90%);
 }
 
